@@ -1,24 +1,24 @@
-DIST goocanvas-0.4.tar.gz 566546 RMD160 eec623cef93d3aacc279ff73fac6f9259c7f5769 SHA1 7b7168628f080dcd9c9c019ece390816bb136e98 SHA256 6e9594a6864e73e23fec540a430a454c2168394d9ec793e9d6adb1530f5d096a
 DIST goocanvas-0.8.tar.gz 733035 RMD160 ef10ef9804fadf586632cea6725f8b0e093fc6c7 SHA1 e953cabe308b163462c1fa5b683ff33c7b69224d SHA256 d6befc71c1abfeb1aaf69665f639eeec001d8cb75b8912439b4080f9f0c41061
-EBUILD goocanvas-0.4.ebuild 592 RMD160 b939bb5f5220cc7a44f192ec68f8d60063f085af SHA1 72fb79a2eb8837a7f080fad581287889abc99edd SHA256 7e1752b6c9e73adc88528e2efe475d700c4e3789183337f6633c508a54bb99b6
-MD5 4973ff16f725d9a3ec26aa16906ad32e goocanvas-0.4.ebuild 592
-RMD160 b939bb5f5220cc7a44f192ec68f8d60063f085af goocanvas-0.4.ebuild 592
-SHA256 7e1752b6c9e73adc88528e2efe475d700c4e3789183337f6633c508a54bb99b6 goocanvas-0.4.ebuild 592
+DIST goocanvas-0.9.tar.gz 749439 RMD160 406085e14db38788213e35b3fc00f1f649fc1f2b SHA1 d26cb18350cbd612f60d93fab1374b4ec8f17575 SHA256 d9435a02e1aea2317ed73106f12c803400679f4e43bf4af54ba419c48e6ea27b
 EBUILD goocanvas-0.8.ebuild 576 RMD160 781e308577f57c9e3f00c3afa52f296d330246e2 SHA1 78e1b7db79c44139adb9287323fb9ac478449667 SHA256 d6bbb71b71c2d6651383f25f80855e04b5ad4c43f4cb87c84d5841fa72b08b3c
 MD5 4c75dd883e0ff259cf65df726ec3acd3 goocanvas-0.8.ebuild 576
 RMD160 781e308577f57c9e3f00c3afa52f296d330246e2 goocanvas-0.8.ebuild 576
 SHA256 d6bbb71b71c2d6651383f25f80855e04b5ad4c43f4cb87c84d5841fa72b08b3c goocanvas-0.8.ebuild 576
-MISC ChangeLog 642 RMD160 e0788708374d25dc77e4954d8f084c6906cea0cf SHA1 9447c47ecf08f45e7323170f035b1dc6be2de31d SHA256 b976338af7e4caae8862a08e9c8eb14611da5a4b94792d8e0acc8de608135eb1
-MD5 531599dc7ffe7a5796084f02c89b9318 ChangeLog 642
-RMD160 e0788708374d25dc77e4954d8f084c6906cea0cf ChangeLog 642
-SHA256 b976338af7e4caae8862a08e9c8eb14611da5a4b94792d8e0acc8de608135eb1 ChangeLog 642
+EBUILD goocanvas-0.9.ebuild 576 RMD160 e092fa1fc7778cd34924ca16fc63b077d9980121 SHA1 85ac9eea59974065f4b9c1cd34eaca12d12adf0c SHA256 af20698cb7b83304f4981067e31b4dcabc7163b073e2a1dc9407f2cc914f6223
+MD5 dd3a579c1308236cab9af49b7c2f639e goocanvas-0.9.ebuild 576
+RMD160 e092fa1fc7778cd34924ca16fc63b077d9980121 goocanvas-0.9.ebuild 576
+SHA256 af20698cb7b83304f4981067e31b4dcabc7163b073e2a1dc9407f2cc914f6223 goocanvas-0.9.ebuild 576
+MISC ChangeLog 804 RMD160 7f346cf08370cf74184734f1871e6c5c2bbafa94 SHA1 521c7df9fe9c883b872338b54f9fa103e33e0fca SHA256 e82ef8ba17c4902840354625039afee477d2ee3dc226d4a6fe87e2b933abd0eb
+MD5 d79cf84fb8d27d8067e8aa111e6f78e8 ChangeLog 804
+RMD160 7f346cf08370cf74184734f1871e6c5c2bbafa94 ChangeLog 804
+SHA256 e82ef8ba17c4902840354625039afee477d2ee3dc226d4a6fe87e2b933abd0eb ChangeLog 804
 MISC metadata.xml 280 RMD160 edf2ae3ef6864eca83391dc181d864f073aa0b24 SHA1 a4d9e66029dc12053dc2bac44a2fd30f4c815198 SHA256 fd1589b7cceea348819f33058007397ef61e4405d1c44582b9211422de7aef54
 MD5 cadd4d390d7d754344aa7c7e481f7c2d metadata.xml 280
 RMD160 edf2ae3ef6864eca83391dc181d864f073aa0b24 metadata.xml 280
 SHA256 fd1589b7cceea348819f33058007397ef61e4405d1c44582b9211422de7aef54 metadata.xml 280
-MD5 9a42953893a1e6f737efb0667a8b41dc files/digest-goocanvas-0.4 241
-RMD160 7aac729c7c0507c50161486884aee779e6ab6bf4 files/digest-goocanvas-0.4 241
-SHA256 9c945f7c838457b454dd06c0513689895829e575656a46996da7080f2c8f7c08 files/digest-goocanvas-0.4 241
 MD5 a20686e3a7cb6786ddc7547e48acea85 files/digest-goocanvas-0.8 241
 RMD160 e915d05d4dd2d4ce34e77ed9330c381b0a186c05 files/digest-goocanvas-0.8 241
 SHA256 0d39754ce2ce4f376511e83b4c6d0c9798afe1b6f0b448b093801afa8a15c4f6 files/digest-goocanvas-0.8 241
+MD5 84d71c2dea74110d382a9b5a00e263a5 files/digest-goocanvas-0.9 241
+RMD160 6465236b0b1e086a3961d200e99026cc8a3934c0 files/digest-goocanvas-0.9 241
+SHA256 07e1b7b38836818ee98c7a62b20ff668bc4ba3b5c4a10fd5af7e2fdd1c4a6aa9 files/digest-goocanvas-0.9 241
