@@ -1,3 +1,0 @@
-MD5 a53edae318e87d13269c2fbd2fe34cd3 goocanvas-0.4.tar.gz 566546
-RMD160 eec623cef93d3aacc279ff73fac6f9259c7f5769 goocanvas-0.4.tar.gz 566546
-SHA256 6e9594a6864e73e23fec540a430a454c2168394d9ec793e9d6adb1530f5d096a goocanvas-0.4.tar.gz 566546
