@@ -1,0 +1,3 @@
+MD5 600f28e51736b9d768108c32172b0726 goocanvas-0.9.tar.gz 749439
+RMD160 406085e14db38788213e35b3fc00f1f649fc1f2b goocanvas-0.9.tar.gz 749439
+SHA256 d9435a02e1aea2317ed73106f12c803400679f4e43bf4af54ba419c48e6ea27b goocanvas-0.9.tar.gz 749439
